--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^3.1.18
   flutter_secure_storage: ^5.0.2
   flutter_custom_clippers: ^2.0.0
+  photo_view: ^0.14.0
   
 
 
