--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   flutter_custom_clippers: ^2.0.0
   photo_view: ^0.14.0
+  url_launcher: ^6.1.4
   
 
 
@@ -74,12 +75,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/icons/
     - assets/img/
     - assets/google.svg
     - assets/phone.svg
     - assets/mavioguz.jpg
-    - assets/images/
-    - assets/icons/
+    
     
   #   - images/a_dot_ham.jpeg
 
